objects/Opportunity__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Close_Date__c</fullName>
        <label>Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Close_Qtr__c</fullName>
        <label>Close Qtr</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FY__c</fullName>
        <label>FY</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item_Class_num__c</fullName>
        <label>Item Class num</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Line_of_Business__c</fullName>
        <label>Line of Business</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Opportunity Line Items</relationshipLabel>
        <relationshipName>Opportunity_Line_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Part_Description__c</fullName>
        <label>Part Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Part_Number__c</fullName>
        <label>Part Number</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Family__c</fullName>
        <label>Product Family</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QTR__c</fullName>
        <label>QTR</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Opportunity Line Item</label>
    <nameField>
        <displayFormat>oli-{0000}</displayFormat>
        <label>Opportunity Line Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>